<resources>
    <string name="app_name" translatable="false">Smart Rice Care</string>
    <string name="title_activity_maps">Map</string>
    <string name="signin">SignIn</string>
    <string name="register">Register</string>
    <string name="my_requests">My Requests</string>
    <string name="map">Map</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="farmer_registration">Farmer Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="nic">NIC</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="next">Next</string>
    <string name="capture_image">Capture Image</string>
    <string name="please_check_the_form_again">Please check your the form again</string>
    <string name="first_name_can_not_be_empty">First Name can not be empty</string>
    <string name="last_name_can_not_be_empty">Last Name can not be empty</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="email_can_not_be_empty">Email can not be empty</string>
    <string name="invalid_phone_number" translatable="true">Invalid Phone Number</string>
    <string name="phone_number_can_not_be_empty">Phone Number can not be empty</string>
    <string name="invalid_nic">Invalid NIC</string>
    <string name="nic_can_not_be_empty" translatable="true">NIC can not be empty</string>
    <string name="password_mismatches">Password Mismatches</string>
    <string name="password_should_have_at_least_6_characters">Password should have at least 6 characters</string>
    <string name="field_registration" translatable="false">Field Registration</string>
    <string name="registration_number" translatable="false">Registration Number</string>
    <string name="province" translatable="false">Province</string>
    <string name="district" translatable="false">District</string>
    <string name="division" translatable="false">Division</string>
    <string name="address" translatable="false">Field Address</string>
    <string name="send_request" translatable="false">Send Request</string>
    <string name="add_location" translatable="false">Add Location</string>
    <string name="select_location" translatable="false">Select Location</string>
    <string name="selected_location_details" translatable="false">Selected Location Details</string>
    <string name="latitude" translatable="false">Latitude</string>
    <string name="longitude" translatable="false">Longitude</string>
    <string name="not_yet_selected" translatable="false">Not Yet Selected</string>
    <string name="notes" translatable="false">Notes</string>
    <string name="plant_age" translatable="false">Plant Age (Weeks)</string>
    <string name="signout" translatable="false">Signout</string>
    <string name="view_requests" translatable="false">View Requests</string>
    <string name="view_results" translatable="false">View Results</string>
    <string name="calibrate_sensor" translatable="false">Calibrate Sensor</string>
</resources>