<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegisterUserDetailsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:paddingTop="30dp"
                    android:layout_weight="1">

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/create_a_new_account"
                            android:gravity="center"
                            android:textColor="@color/green_800"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:paddingTop="30dp"
                    android:layout_weight="6">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            android:layout_weight="1">
                                <EditText
                                    android:id="@+id/et_first_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="10dp"
                                    android:textSize="16sp"
                                    android:hint="@string/first_name"
                                    android:inputType="textPersonName" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            android:layout_weight="1">
                                <EditText
                                    android:id="@+id/et_last_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="10dp"
                                    android:textSize="16sp"
                                    android:hint="@string/last_name"
                                    android:inputType="textPersonName"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            android:layout_weight="1">
                                <EditText
                                    android:id="@+id/et_email"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="10dp"
                                    android:textSize="16sp"
                                    android:hint="@string/email"
                                    android:inputType="textEmailAddress" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            android:layout_weight="1">
                                <EditText
                                    android:id="@+id/et_phone"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="10dp"
                                    android:textSize="16sp"
                                    android:hint="@string/phone_number"
                                    android:inputType="phone"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            android:layout_weight="1">
                                <EditText
                                    android:id="@+id/et_nic"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="10dp"
                                    android:textSize="16sp"
                                    android:hint="@string/nic"
                                    android:inputType="text"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            android:layout_weight="1">
                                <EditText
                                    android:id="@+id/et_password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="10dp"
                                    android:textSize="16sp"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="vertical"
                            android:layout_weight="1">
                                <EditText
                                    android:id="@+id/et_password_re_enter"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="10dp"
                                    android:textSize="16sp"
                                    android:hint="@string/re_enter_password"
                                    android:inputType="textPassword"/>
                        </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_weight="1.2"
                    android:paddingTop="30dp"
                    android:layout_marginBottom="20dp">

                        <Button
                            android:id="@+id/bt_next"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/next"
                            android:paddingVertical="10dp"
                            android:textSize="18sp"
                            android:textAllCaps="false"/>

                </LinearLayout>

        </LinearLayout>

</ScrollView>

