<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:paddingTop="30dp">

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:src="@drawable/logo"-->
<!--            android:scaleType="centerInside"-->
<!--            android:layout_gravity="center"/>-->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingTop="30dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:padding="12dp"
                    android:layout_marginTop="15dp"
                    android:drawablePadding="10dp"
                    android:nextFocusDown="@id/et_password"
                    android:imeOptions="actionNext"
                    android:singleLine="true"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:padding="12dp"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:singleLine="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange_900"
                    android:textColor="@color/white"
                    android:text="@string/register"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:layout_marginRight="9dp"
                    android:id="@+id/bt_signup"
                    android:paddingLeft="20dp"
                    android:drawablePadding="-30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/green_500"
                    android:textColor="@color/white"
                    android:text="@string/signin"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    android:layout_marginLeft="9dp"
                    android:id="@+id/bt_login"
                    android:paddingLeft="20dp"
                    android:drawablePadding="-30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>